--- a/main/CSS/main.css
+++ b/main/CSS/main.css
@@ -20,7 +20,7 @@
         }
         .card {
             width: calc(33.33% - 20px);
-            padding: 10px;
+            padding: 20px 50px;
             border-radius:10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             transition: transform 0.3s, box-shadow 0.3s;
