--- a/main/CSS/main.css
+++ b/main/CSS/main.css
@@ -7,7 +7,7 @@
             height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
-            background-image: url('https://raw.githubusercontent.com/Azze1/Azze.github.io/main/img/BackGraund.png');
+            background-image: url('https://raw.githubusercontent.com/Azze1/Azze1.github.io./main/img/BackGraund.png');
             user-select: none; /* This prevents text selection */
             -webkit-user-select: none; /* For Safari */
             -moz-user-select: none; /* For Firefox */
