--- a/main/CSS/main.css
+++ b/main/CSS/main.css
@@ -1,4 +1,5 @@
         body {
+            overflow: hidden;
             font-family: Arial, sans-serif;
             display: flex;
             flex-direction: column;
